green compile